@@ -29,6 +29,8 @@ v3.6.0 - xx xxx xxxx
      * Added a new sub-command, ovs/router/rule/show, to list OVS router rules.
      * 'ovs/route/add' and 'ovs/route/del': added new option, table=ID, to
        add/delete a route from a specific OVS table.
+     * 'ovs/route/lookup': added new option, src=IP, to perform lookup with
+       a specific source IP address.
    - ovs-vsctl:
      * Now exits with error code 160 (ERROR_BAD_ARGUMENTS) on Windows and
        65 (EX_DATAERR) on other platforms if it fails while waiting for
